# fin_report_agent

./: .gitignore  .mcp.json  CLAUDE.md  CLOUDFLARE_DEPLOYMENT.md  DISTRIBUTION.md  INSTALLATION_COMPLETE.md  QUICK_START.md  README.md  REFACTORING_PLAN.md  create_sample_data.py  demo_mcp_server.py  demo_phase2.py  demo_restaurant_analytics.py  main.py  mcp_server_main.py  pyproject.toml  restaurant_analysis_results.json  run_mcp_server.py  sample_restaurant.xlsx  simple_mcp_demo.py  test_parser.py  test_simple_tools_demo.py
data/: sample_restaurant_income_2025.csv  sample_restaurant_income_2025.xlsx
docs/: COLUMN_INTELLIGENCE.md
prompts/: config.yml
prompts/contexts/: analysis.yml  exploration.yml  validation.yml
prompts/templates/accounting/: classify_columns.yml
prompts/templates/structure/: identify_report.yml
prompts/templates/validation/: validate_investment.yml  validate_investment_simple.yml
src/: __init__.py
src/analyzers/: __init__.py  adaptive_financial_analyzer.py  comparative_analyzer.py  financial_analytics.py  insights_generator.py  kpi_calculator.py  restaurant_analytics.py  trend_analyzer.py
src/mcp_server/: __init__.py  bilingual_reporter.py  claude_integration.py  cli.py  config.py  error_handling.py  financial_memory.py  financial_navigator.py  handler_router.py  server.py  simple_tools.py  thinking_tools.py  tool_registry.py  tools.py  validation_config.py  validation_state.py
src/mcp_server/handlers/: __init__.py  base.py  complex_analysis_handler.py  legacy_analysis_handler.py  memory_handler.py  navigation_handler.py  simple_tools_handler.py  thinking_handler.py
src/models/: __init__.py  financial_data.py
src/parsers/: __init__.py  account_hierarchy_parser.py  chinese_excel_parser.py  column_classifier.py
src/prompts/: prompt_factory.py
src/tools/: simple_calculators.py  simple_extractors.py
src/transformers/: __init__.py  data_transformer.py
src/validators/: __init__.py  financial_validator.py  restaurant_validator.py
tests/: test_chinese_excel_parser.py  test_enhanced_account_hierarchy_parser.py  test_mcp_server.py  test_restaurant_analytics.py  test_validation_state_manager.py  test_validation_system.py
